2010-09-23  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-awt-window-size.patch:
	Moved to...
	* Makefile.am: Fix path of above patch.
	* patches/openjdk/6721088-awt_window_size.patch,
	...here to reflect upstreaming.

2010-09-23  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(.PHONY): Add clean-add-nss, clean-add-nss-debug,
	clean-add-tzdata-support and clean-add-tzdata-support-debug.
	(clean-local): Likewise.
	(icedtea): Remove NSS and tzdata support.
	(icedtea-debug): Likewise.
	(icedtea-against-icedtea): Depend on add-nss and add-tzdata-support.
	(icedtea-debug-against-icedtea): Depend on add-nss-debug and add-tzdata-support-debug.
	(add-nss): New target to add NSS support to the build.
	(add-nss-debug): Likewise for debug.
	(clean-add-nss): Remove NSS support from the build.
	(clean-add-nss-debug): Likewise for debug.
	(add-tzdata-support): New target to add alternate timezone data support to the build.
	(add-tzdata-support-debug): Likewise for debug.
	(clean-add-tzdata-support): Remove alternate timezone data support from the build.
	(clean-add-tzdata-support-debug): Likewise for debug.

2010-09-23  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(.PHONY): Add clean-add-pulseaudio and
	clean-add-pulseaudio-debug.
	(clean-local): Likewise.
	(icedtea): Remove pulse-java support and dependency.
	(icedtea-debug): Likewise.
	(icedtea-against-icedtea): Depend on add-pulseaudio.
	(icedtea-debug-against-icedtea): Depend on add-pulseaudio-debug.
	(add-systemtap-debug): Dependency should be icedtea-debug.
	(add-pulseaudio): New target to add PulseAudio support to the build.
	(add-pulseaudio-debug): Likewise for debug.
	(clean-add-pulseaudio): Remove PulseAudio support from the build.
	(clean-add-pulseaudio-debug): Likewise for debug.

2010-09-22  Andrew John Hughes  <ahughes@redhat.com>

	Move SystemTap support to a separate target.
	* Makefile.am:
	(.PHONY): Add clean-add-systemtap and
	clean-add-systemtap-debug.