@@ -1,3 +1,10 @@
+2010-09-24  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	(clean-local): Remove add-x and add-x-debug clean targets.
+	(clean-icedtea-against-icedtea): Add clean-add-x targets.
+	(clean-icedtea-debug-against-icedtea): Add clean-add-x-debug targets.
+
 2010-09-23  Andrew John Hughes  <ahughes@redhat.com>
 
 	* patches/icedtea-awt-window-size.patch:
